<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/cartTitle"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_cart"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/cartListView"
        style="@style/ProductListItem"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/totalPrice"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_0_00"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/checkoutButton"
        style="@style/PetStoreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:layout_marginTop="10dp"/>
</LinearLayout>
