<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <ImageView
        android:id="@+id/searchLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/search_logo"
        android:src="@drawable/searchicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchInput"
        style="@style/HeaderText"
        android:layout_width="233dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:hint="@string/search_text"
        app:layout_constraintEnd_toStartOf="@id/searchButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/searchLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchButton"
        style="@style/PetStoreButton"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="4dp"
        android:text="Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchLogo" />

    <Switch
        android:id="@+id/switchDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="240dp"
        android:text="@string/home_delivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categorySpinner"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ListView
        android:id="@+id/listView"
        style="@style/ProductListItem"
        android:layout_width="373dp"
        android:layout_height="454dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/cartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cartButton"
        style="@style/PetStoreButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/view_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
